fix scrollbar with windows menu bar

--- a/css/vatron.css
+++ b/css/vatron.css
@@ -25,7 +25,7 @@ html, body {
 }
 
 .row.fluid {
-  height: calc(100% - 56px);
+  height: calc(100% - 85px);
 }
 
 nav {
